# computationalintelligence2022-s303339

./: README.md  pyproject.toml
lab1/: README.md  lab1_set-covering.ipynb  solution.py
lab2/: README.md  lab2_set-covering-GA.ipynb
lab3/: README.md  lab3_nim.ipynb
